cm4all-workshop (6.0.12) unstable; urgency=low

  * spawn: combine multiple EXIT in one datagram
  * spawn: improved handling of spawner startup errors
  * add JavaScript-based PolicyKit rules (version 121 or newer)

 --   

cm4all-workshop (6.0.11) unstable; urgency=low

  * spawn: given the spawner the highest possible CPU and I/O weight
  * spawn: combine multiple KILL commands on one datagram
  * spawn: drop support for cgroup1
  * spawn: workaround for stuck spawner if execve() is delayed by shrinker

 -- Max Kellermann <mk@cm4all.com>  Thu, 02 Mar 2023 18:10:03 +0100

cm4all-workshop (6.0.10) unstable; urgency=low

  * spawn: support MOUNT_HOME inside MOUNT_EMPTY
  * pond: set type=JOB
  * drop support for /etc/default/cm4all-workshop (deprecated since v4)
  * drop Boost dependency

 -- Max Kellermann <mk@cm4all.com>  Wed, 08 Feb 2023 16:03:40 +0100

cm4all-workshop (6.0.9) unstable; urgency=low

  * merge release 5.5

 -- Max Kellermann <mk@cm4all.com>  Sun, 23 Oct 2022 17:31:50 +0200

cm4all-workshop (6.0.8) unstable; urgency=low

  * spawn: fix SIGBUS crash on ARM64 due to misaligned stack

 -- Max Kellermann <mk@cm4all.com>  Wed, 05 Oct 2022 17:50:02 +0200

cm4all-workshop (6.0.7) unstable; urgency=low

  * translation: add packet WRITE_FILE

 -- Max Kellermann <mk@cm4all.com>  Wed, 21 Sep 2022 10:25:18 +0200

cm4all-workshop (6.0.6) unstable; urgency=low

  * spawn: failure to create systemd scope is fatal

 -- Max Kellermann <mk@cm4all.com>  Wed, 24 Aug 2022 08:44:41 +0200

cm4all-workshop (6.0.5) unstable; urgency=low

  * spawn: fix bind mount on files

 -- Max Kellermann <mk@cm4all.com>  Fri, 15 Jul 2022 14:23:34 +0200

cm4all-workshop (6.0.4) unstable; urgency=low

  * spawn: fix inotify busy loop
  * spawn: fix CRC miscalculation bug

 -- Max Kellermann <mk@cm4all.com>  Wed, 13 Jul 2022 11:09:40 +0200

cm4all-workshop (6.0.3) unstable; urgency=low

  * spawn: fix memory limit setup
  * spawn: support percent memory limits