@@ -188,7 +188,6 @@ executable('cm4all-workshop',
   'src/CommandLine.cxx',
   'src/CgroupAccounting.cxx',
   'src/AllocatorPtr.cxx',
-  'src/SyslogClient.cxx',
   'src/CaptureBuffer.cxx',
   'src/PipeCaptureBuffer.cxx',
   'src/PipePondAdapter.cxx',
